--- a/src/app/pprl-data-view/pprl-data-view.component.html
+++ b/src/app/pprl-data-view/pprl-data-view.component.html
@@ -1,63 +1,81 @@
 
 
-<mat-form-field>
-    <div>
-      <mat-toolbar>
-        <!-- Browse Button -->
-        <button mat-flat-button color="primary">Browse</button>
-        <!-- Display files names -->
-        <input matInput [(ngModel)]="fileAttr" readonly name="name" />
-      </mat-toolbar>
-      <!-- Fetch selected filed on change -->
-      <input
-        type="file"
-        #fileInput
-        id="uploadFile"
-        (change)="uploadFileEvt($event)"
-        name="uploadFile"
-        multiple="multiple"
-        accept="image/*"
-      />
+<div>
+  <p class="header">PPRL data pre-processor</p>
+  <p class="header-content">This application is processing a CSV file. After processing the CSV-File the content will be showed in the table below.</p>
+  <p class="header-content">You can check the data and then send that data to the Transformer Service.</p>
+  <p class="header-content">The transformed data will then be showed in the table below and can be downloaded with the button "Download Table as CSV".</p>
+</div>
+<div class="uploader">
+  <mat-form-field >
+      <div>
+        <mat-toolbar>
+          <!-- Browse Button -->
+          <button mat-flat-button color="primary">Browse</button>
+          <!-- Display files names -->
+          <input matInput [(ngModel)]="fileAttr" readonly name="name" />
+        </mat-toolbar>
+        <!-- Fetch selected filed on change -->
+        <input
+          type="file"
+          #fileInput
+          id="uploadFile"
+          (change)="uploadFileEvt($event)"
+          name="uploadFile"
+          multiple="multiple"
+          accept="csv/*"
+        />
+      </div>
+  </mat-form-field>
+  <div class="button-container">
+    <div class="spinner-container" *ngIf="loading">
+      <mat-spinner diameter="24"></mat-spinner>
     </div>
-</mat-form-field>
+    <button mat-flat-button #transform color="primary" [disabled]="transformed === true || loading === true" [class.spinner]="loading" (click)="transformData(dataSource)">Upload and process</button>
+  </div>
+  <button mat-flat-button #export color="primary" (click)="resetUploadedFile()">Reset File</button>
+  <button mat-flat-button #export color="primary" (click)="saveDateToCSV(dataSource)">Download Table as CSV</button>
+</div>
+<div *ngIf="!transformed" class="table-title">Current Selected File with following Data</div>
+<div *ngIf="transformed" class="table-title">Processed Data from uploaded file</div>
+<section class="table-container mat-elevation-z8" tabindex="0">
+  <table mat-table matTableExporter [dataSource]="dataSource" #exporter="matTableExporter" class="mat-elevation-z8">
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="firstName">
-      <th mat-header-cell *matHeaderCellDef> First name </th>
-      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="lastName">
-      <th mat-header-cell *matHeaderCellDef> Last name </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> Gender </th>
-      <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="birthday">
-        <th mat-header-cell *matHeaderCellDef> Birth date </th>
-        <td mat-cell *matCellDef="let element"> {{element.birthday}} </td>
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
     
+      <!-- Name Column -->
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="gender">
+        <th mat-header-cell *matHeaderCellDef> Gender </th>
+        <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="birthDate">
+          <th mat-header-cell *matHeaderCellDef> Birth Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
+        </ng-container>
+      
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>  
-  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>  
+</section>
